--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/hoangmirs/MirsRoom/issues"
   },
-  "homepage": "https://github.com/hoangmirs/MirsRoom#readme"
+  "homepage": "https://github.com/hoangmirs/MirsRoom#readme",
+  "dependencies": {
+    "express": "^4.14.1",
+    "onoff": "^1.1.2",
+    "socketio": "^1.0.0"
+  }
 }
