--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mirsroom",
   "version": "1.0.0",
   "description": "Smart room of Mirs",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
