--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.14.1",
     "grunt-cli": "^1.2.0",
     "onoff": "^1.1.2",
+    "say": "^0.11.0",
     "socketio": "^1.0.0"
   }
 }
